# swagger-output.json
@@ -10,48 +10,15 @@
   "tags": [
     {
       "name": "Auth",
-      "description": "Endpoints de Autenticación",
-      "/api/auth/register": {
-      "post": {
-        "description": "",
-        "parameters": [
-          {
-            "name": "body",
-            "in": "body",
-            "schema": {
-              "type": "object",
-              "properties": {
-                "name": {
-                  "example": "any"
-                },
-                "email": {
-                  "example": "any"
-                },
-                "password": {
-                  "example": "any"
-                }
-              }
-            }
-          }
-        ],
-        "responses": {
-          "201": {
-            "description": "Created"
-          },
-          "400": {
-            "description": "Bad Request"
-          },
-          "500": {
-            "description": "Internal Server Error"
-          }
-        }
-      }
-    }
-
+      "description": "Endpoints de Autenticación"      
     },
     {
       "name": "Health",
       "description": "Monitoreo del servidor"
+    },
+    {
+      "name": "Docs",
+      "description": "Documentacion de endpoints"
     }
   ],
   "schemes": [
@@ -60,7 +27,8 @@
   "paths": {
     "/api/auth/register": {
       "post": {
-        "description": "",
+        "tags": ["Auth"],
+        "description": "Registro de Usuario",
         "parameters": [
           {
             "name": "body",
@@ -96,7 +64,8 @@
     },
     "/api/auth/login": {
       "post": {
-        "description": "",
+        "tags": ["Auth"],
+        "description": "Login Usuario registrado",
         "parameters": [
           {
             "name": "body",
@@ -129,8 +98,24 @@
     },
     "/api/health/": {
       "get": {
-        "description": "",
+        "tags": ["Health"],
+        "description": "Verificar estado del server y conexión a BD",
         "responses": {
+          "200": {
+            "description": "OK"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        }
+      }
+    },
+    "/api/docs/": {
+      "get": {
+        "tags": ["Docs"],
+        "description": "Ver documentacion de APIs",
+        "produces": ["HTML"],
+        "responses": {          
           "200": {
             "description": "OK"
           },
